--- a/package.xml
+++ b/package.xml
@@ -9,6 +9,7 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>example_interfaces</depend>
   <depend>rclcpp</depend>
   <depend>rcutils</depend>
   <depend>rosbag2_cpp</depend>
